src/test/test-models/good/keywords-foreach.stan
parameters {
  real foreaches;
}
model {
  foreaches ~ normal(0,1);
}
