src/test/test-models/bad/reserved/positive_ordered.stan
data {
  real positive_ordered;
}
model {
}
